--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,7 @@
       "backgroundColor": "#2ecc71"
     }
   ],
-  "workbench.colorTheme": "Night Owl",
+  "workbench.colorTheme": "Tokyo Night Storm",
   "window.zoomLevel": -1,
   "explorer.confirmDragAndDrop": false,
   "javascript.updateImportsOnFileMove.enabled": "always",
