--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
     "nativewind": "^2.0.11",
@@ -21,6 +23,7 @@
     "react-native": "0.71.8",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.10.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
