--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipeable": "^0.6.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
