--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/react-native": "^12.2.2",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -30,13 +35,24 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^8.1.2",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.3",
     "@types/react": "~18.0.14",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
