--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react-native": "^12.2.2",
     "axios": "^1.4.0",
+    "babel-jest": "^29.6.2",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
-    "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -41,18 +41,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
     "@types/react": "~18.0.14",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.4"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ]
   },
   "private": true
 }
